--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -73,10 +73,10 @@ bind -r C-h select-window -t :-
 bind -r C-l select-window -t :+
 
 # Resize pane shortcuts
-bind -r H resize-pane -L 5
-bind -r J resize-pane -D 5
-bind -r K resize-pane -U 5
-bind -r L resize-pane -R 5
+bind -r H resize-pane -L 2
+bind -r J resize-pane -D 2
+bind -r K resize-pane -U 2
+bind -r L resize-pane -R 2
 
 # enable mouse support for switching panes/windows
 setw -g mouse on
@@ -107,5 +107,7 @@ source ~/.dotfiles/tmux/base16.sh
 set -g @plugin 'tmux-plugins/tpm'
 #set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'robhurring/tmux-spotify'
+#set -g @plugin 'aar0nTw/tmux-itunes'
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
